css/stylesheet.css
/* ... */
input#create,
input#cancel,
#summary {
  font: 14px "Montserrat Regular";
}

.dark-workspacewrapper input#cancel,
.light-workspacewrapper input#cancel,
.colored-cancel > a {
  background: linear-gradient(35deg, #681212 10%, #851717);
}

.dark-workspacewrapper input#cancel:hover,
.dark-workspacewrapper input#cancel:focus,
.light-workspacewrapper input#cancel:hover,
.light-workspacewrapper input#cancel:focus,
.colored-cancel > a:hover,
.colored-cancel > a:focus {
  background: linear-gradient(35deg, #761414 10%, #9f3030);
}

.ql-editor,
.ql-editor:focus::before {
  background: #ffffe8 !important;
  color: #171717 !important;  
}

.ql-editor {
  filter: drop-shadow(0 0 10px #eee9);
}

.ql-toolbar {
  margin-bottom: 5px;
}

.dark-workspacewrapper .ql-snow,
.dark-workspacewrapper .ql-container,
.light-workspacewrapper .ql-snow,
.light-workspacewrapper .ql-container {
  border: 0 !important;
}

.dark-workspacewrapper .ql-editor,
.dark-workspacewrapper .ql-editor *,
.dark-workspacewrapper .ql-editor::before,
.dark-workspacewrapper #summary,
.dark-workspacewrapper #summary:-internal-autofill-selected {
  background-color: #252c35 !important;
  color: #fff !important;
  outline: 0;
  border: 0;
  filter: none;
}

.light-workspacewrapper .ql-editor,
.light-workspacewrapper .ql-editor *,
.light-workspacewrapper .ql-editor::before,
.light-workspacewrapper #summary,
.light-workspacewrapper #summary:-internal-autofill-selected {
  background-color: #dce6f0 !important;
  outline: 0;
  border: 0;
  filter: none;
}

.light-workspacewrapper .ql-toolbar {
  background: linear-gradient(35deg, #c6cfd8, #dce6f0) !important;
}

.dark-workspacewrapper .ql-toolbar {
  background: linear-gradient(35deg, #1e232a, #252c35) !important;
}

.dark-workspacewrapper svg *,
.dark-workspacewrapper .ql-picker-label::before {
  stroke: #fff !important;
  color: #fff !important;
}

#topbar {
  width: 100%;
  max-width: 100vw;
  display: block;
}

.light-background #topbar,
.dark-background #topbar {
  display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1px;
}

#topbar a {
  color: #171717;
}

.light-menu-tabs a,
.dark-menu-tabs a {
  position: relative;
  width: 100%;
  height: 100%;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
}

#topbar > span {
  margin: 1px;
  text-align: center;
  white-space: nowrap;
  overflow: hidden;
  -o-text-overflow: ellipsis;
  text-overflow: ellipsis;
  transition: all 200ms;
}

.light-background #topbar > span,
.dark-background #topbar > span {
  padding: 2px 3.5px;
  position: relative;
  flex-grow: 1;
  -webkit-border-radius: 1.5px;
  border-radius: 1.5px;
}

.light-background #topbar > .fadeout,
.dark-background #topbar > .fadeout {
  position: relative;
  -webkit-flex-basis: initial;
  -ms-flex-preferred-size: initial;
  flex-basis: initial;
  margin: 0 5px;
}

#topbar > .fadeout > span {
  border-left: 1.5px solid white;
  margin: .1em .3em;
  padding-left: .3em;
}

#topbar > .fadeout > span:first-child {
  border-left: 0 !important;
}

#topbar a:hover,
#topbar a:focus {
  text-decoration: none;
  filter: drop-shadow(0 0 8px #bbb);
}

#topbar .light-menu-tabs a:hover,
#topbar .light-menu-tabs a:focus,
#topbar .dark-menu-tabs a:hover,
#topbar .dark-menu-tabs a:focus {
  filter: 0;
  color: #ccc;
}

.light-menu-tabs:hover,
.light-menu-tabs:focus,
.dark-menu-tabs:hover,
.dark-menu-tabs:focus {
  background: linear-gradient(-35deg, #22516f, #265c7f, #2b688f, #30739f) !important;
}

#versepickerwrapper.light-menu-tabs:hover,
#versepickerwrapper.light-menu-tabs:focus,
#versepickerwrapper.dark-menu-tabs:hover,
#versepickerwrapper.dark-menu-tabs:focus {
  font-weight: normal;
  background: 0;
}

#versepickerwrapper.light-menu-tabs a,
#versepickerwrapper.dark-menu-tabs a {
  height: 100%;
  width: 100%;
  flex-grow: 1;
}

#versepickerwrapper.light-menu-tabs,
#versepickerwrapper.dark-menu-tabs {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}

/* II. a. GLOBAL STYLING: Workspace Page */

#topbar .fadeout {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  overflow: unset;
  white-space: unset;
  font-weight: normal;
}

#topbar .fadeout span a {
  line-height: 28.5px;
  display: block;
  padding: 0 5px;
}

#topbar .fadeout span a:hover {
  font-size: larger;
  font-weight: bold;
  text-decoration: none;
  filter: 0;
}

#versepickerwrapper {
  page-break-before: always;
  white-space: unset;
  overflow: unset;
  -o-text-overflow: unset;
  text-overflow: unset;
  max-width: 87.5vw;
  padding: 0 1em;
}

#versepickerwrapper span {
  margin: 0 2px;
}

#applybook {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

#applybook .selector {
  margin: .11rem;
  white-space: nowrap;
  border-left: 1.5px solid #171717;
  padding-left: .2em;
}

#applybook .selector:hover {
  font-weight: bold;
}

.light-menu-tabs #applybook .selector,
.dark-menu-tabs #applybook .selector {
  border-left: 0;
}

#applybook .selector:nth-of-type(1) {
  border-left: 0 !important;
  padding-left: 0 !important;
}

#applybook .selector a {
  line-height: 30px;
  display: block;
  padding: 0 5px;
  border-radius: 2px;
  transition: all 250ms;
}

.light-background #applybook .selector.frontback a,
.dark-background #applybook .selector.frontback a  {
  background: linear-gradient(35deg, #75348c66, #9b61b066) !important;
  color: #fff !important;
}

.light-background #applybook .selector.ap a,
.dark-background #applybook .selector.ap a  {
  background-color: #eeeeee10;
  color: #fff !important;
}
/* ... */

